--- a/win32/SlimServer.rc
+++ b/win32/SlimServer.rc
@@ -45,7 +45,7 @@ BEGIN
     END
     POPUP "&Help"
     BEGIN
-        MENUITEM "&About SLIMP3 Server...",     ID_APP_ABOUT
+        MENUITEM "&About Slim Server...",     ID_APP_ABOUT
     END
 END
 
@@ -86,14 +86,14 @@ BEGIN
     BEGIN
         MENUITEM "Getting Started",             ID_HELP_GETTINGSTARTED
         MENUITEM "Player Setup",                ID_HELP_PLAYERSETUP
-        MENUITEM "Using The SLIMP3 Remote",     ID_HELP_USINGTHESLIMP3REMOTE
+        MENUITEM "Using The Slim Devices Remote",     ID_HELP_USINGTHESLIMREMOTE
         MENUITEM "Remote Control Reference",    ID_HELP_REMOTECONTROLREFERENCE
 
         MENUITEM "Frequently Asked Questions",  ID_HELP_FREQUENTLYASKEDQUESTIONS
 
         MENUITEM "Technical Information",       ID_HELP_TECHNICALINFORMATION
         MENUITEM SEPARATOR
-        MENUITEM "&About SLIMP3 Server...",     ID_APP_ABOUT
+        MENUITEM "&About Slim Server...",     ID_APP_ABOUT
     END
 END
 
@@ -130,11 +130,11 @@ END
 IDD_ABOUTBOX DIALOGEX 0, 0, 253, 76
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
-CAPTION "About SLIMP3 Server"
+CAPTION "About Slim Server"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,7,15,21,20
-    LTEXT           "SLIMP3 Server 4.2.2 for Windows",IDC_STATIC,43,20,137,8,
+    LTEXT           "Slim Server 5.0.0 for Windows",IDC_STATIC,43,20,137,8,
                     SS_NOPREFIX
     LTEXT           "Copyright (C) 2002-2003, Slim Devices, Inc.",IDC_STATIC,
                     42,57,164,8
@@ -143,7 +143,7 @@ END
 
 IDD_PROPPAGE_SMALL DIALOGEX 0, 0, 261, 127
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_DISABLED | WS_CAPTION
-CAPTION "SLIMP3 Server Settings"
+CAPTION "Slim Server Settings"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     PUSHBUTTON      "Change...",IDC_MUSICFOLDER_SELECT,188,38,56,13
@@ -160,11 +160,11 @@ END
 IDD_DIALOG_LOADING DIALOGEX 0, 0, 219, 142
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | 
     WS_CAPTION | WS_SYSMENU
-CAPTION "SLIMP3 Server"
+CAPTION "Slim Server"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Cancel",IDC_BUTTON_EXIT,142,118,68,15
-    LTEXT           "SLIMP3 Server for Windows",IDC_STATIC,10,104,129,10
+    LTEXT           "Slim Server for Windows",IDC_STATIC,10,104,129,10
     LTEXT           "Starting Up...",IDC_LOADING,10,121,104,8
     CONTROL         160,IDC_STATIC,"Static",SS_BITMAP,10,11,200,90
 END
@@ -176,8 +176,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 4,2,2,1
- PRODUCTVERSION 4,2,2,1
+ FILEVERSION 5,0,0,1
+ PRODUCTVERSION 5,0,0,1
  FILEFLAGSMASK 0x1fL
 #ifdef _DEBUG
  FILEFLAGS 0x3L
@@ -193,13 +193,13 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "Slim Devices, Inc."
-            VALUE "FileDescription", "SLIMP3 Server"
-            VALUE "FileVersion", "4.2.2"
-            VALUE "InternalName", "SLIMP3 Server.exe"
+            VALUE "FileDescription", "Slim Server"
+            VALUE "FileVersion", "5.0.0"
+            VALUE "InternalName", "Slim Server.exe"
             VALUE "LegalCopyright", "(c) 2002-2003 Slim Devices, Inc."
-            VALUE "OriginalFilename", "SLIMP3 Server.exe"
-            VALUE "ProductName", "SLIMP3 Server"
-            VALUE "ProductVersion", "4.2.2"
+            VALUE "OriginalFilename", "Slim Server.exe"
+            VALUE "ProductName", "Slim Server"
+            VALUE "ProductVersion", "5.0.0"
         END
     END
     BLOCK "VarFileInfo"
@@ -282,19 +282,19 @@ BEGIN
     IDS_STOP                "Stop"
     ID_VIEW_REFRESH         "Refresh Page"
     IDS_REFRESH             "Refresh"
-    ID_GO_START_PAGE        "SLIMP3 Home"
-    IDS_HOME                "SLIMP3 Home"
+    ID_GO_START_PAGE        "Slim Home"
+    IDS_HOME                "Slim Home"
 END
 
 STRINGTABLE 
 BEGIN
     IDR_SlimServerTYPE      "\nSlimServer\nSlimServer\n\n\nSlimServer.Document\nSlimServer.Document"
-    IDR_MAINFRAME           "SLIMP3 Server"
+    IDR_MAINFRAME           "Slim Server"
 END
 
 STRINGTABLE 
 BEGIN
-    AFX_IDS_APP_TITLE       "SLIMP3 Server"
+    AFX_IDS_APP_TITLE       "Slim Server"
     AFX_IDS_IDLEMESSAGE     "Ready"
 END
 
@@ -389,17 +389,17 @@ END
 
 STRINGTABLE 
 BEGIN
-    ID_OPTIONS_CONFIRMONEXIT "Confirm Before Exiting SLIMP3 Server"
+    ID_OPTIONS_CONFIRMONEXIT "Confirm Before Exiting Slim Server"
     ID_OPTIONS_STOPSERVERONEXIT "Stop the server when closing the window"
-    ID_OPTIONS_HIDEWHENMINIMIZED "Hide SLIMP3 Server When Minimized"
+    ID_OPTIONS_HIDEWHENMINIMIZED "Hide Slim Server When Minimized"
     ID_VIEW_DEBUGWINDOW     "View Debug Window"
     ID_FILE_RESCANLIBRARY   "Rescan Music Library Folder"
 END
 
 STRINGTABLE 
 BEGIN
-    ID_OPTIONS_USESLIMP3SERVERTOPLAYMP3FILES 
-                            "Use SLIMP3 Server to Play MP3 files on my computer"
+    ID_OPTIONS_USESLIMSERVERTOPLAYMP3FILES 
+                            "Use Slim Server to Play MP3 files on my computer"
 END
 
 #endif    // English (U.S.) resources
