--- a/redhat/slimd.config
+++ b/redhat/slimd.config
@@ -1,6 +1,6 @@
 # Edit this to suit your setup
 SLIMD_USER="slim"
-SLIMD_HOME="PREFIX/slim"
+SLIMD_HOME="PREFIX/slimd"
 SLIMD_CFG="/etc/slimd.conf"
 SLIMD_LOG="/tmp/slimd.log"
 SLIMD_ARGS="--daemon --prefsfile=$SLIMD_CFG --logfile=$SLIMD_LOG"
