The user name is stored in more than one place.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@237 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/redhat/slimd.config
+++ b/redhat/slimd.config
@@ -1,5 +1,5 @@
 # Edit this to suit your setup
-SLIMD_USER="slim"
+SLIMD_USER="slimd"
 SLIMD_HOME="PREFIX/slimd"
 SLIMD_CFG="/etc/slimd.conf"
 SLIMD_LOG="/tmp/slimd.log"
