Fixed the bad path in the sysconfig file.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@238 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/redhat/slimd.config
+++ b/redhat/slimd.config
@@ -1,6 +1,6 @@
 # Edit this to suit your setup
 SLIMD_USER="slimd"
-SLIMD_HOME="PREFIX/slimd"
+SLIMD_HOME="PREFIX"
 SLIMD_CFG="/etc/slimd.conf"
 SLIMD_LOG="/tmp/slimd.log"
 SLIMD_ARGS="--daemon --prefsfile=$SLIMD_CFG --logfile=$SLIMD_LOG"
