--- a/osx/Preference Pane/SLIMP3 Firmware Updater/SLIMP3 Firmware Updater-Info.plist
+++ b/osx/Preference Pane/SLIMP3 Firmware Updater/SLIMP3 Firmware Updater-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleGetInfoString</key>
 	<string></string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>slimp3updater.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.slimdevices.SLIMP3_Firmware_Updater</string>
 	<key>CFBundleInfoDictionaryVersion</key>
