--- a/osx/Preference Pane/SLIMP3 Firmware Updater/SLIMP3 Firmware Updater-Info.plist
+++ b/osx/Preference Pane/SLIMP3 Firmware Updater/SLIMP3 Firmware Updater-Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.0d1</string>
+	<string>5.0.0</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
