--- a/win32/SlimServer.vcproj
+++ b/win32/SlimServer.vcproj
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding = "Windows-1252"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.00"
+	Version="7.10"
 	Name="SlimServer"
 	ProjectGUID="{013133AD-F5E6-4358-98FC-8D7B0A479221}"
 	Keyword="MFCProj">
@@ -55,7 +55,13 @@
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
 			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
 				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
@@ -107,9 +113,17 @@
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
 			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
 				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 	</Configurations>
+	<References>
+	</References>
 	<Files>
 		<Filter
 			Name="Source Files"
@@ -136,6 +150,9 @@
 				RelativePath="MyOutputView.cpp">
 			</File>
 			<File
+				RelativePath="sinstance.cpp">
+			</File>
+			<File
 				RelativePath="SlimPrefs.cpp">
 			</File>
 			<File
@@ -143,12 +160,6 @@
 			</File>
 			<File
 				RelativePath="SlimServerDoc.cpp">
-			</File>
-			<File
-				RelativePath="TimeoutSocket.cpp">
-			</File>
-			<File
-				RelativePath="sinstance.cpp">
 			</File>
 			<File
 				RelativePath="stdafx.cpp">
@@ -164,6 +175,9 @@
 						Name="VCCLCompilerTool"
 						UsePrecompiledHeader="1"/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="TimeoutSocket.cpp">
 			</File>
 		</Filter>
 		<Filter
@@ -194,6 +208,9 @@
 				RelativePath="Resource.h">
 			</File>
 			<File
+				RelativePath="sinstance.h">
+			</File>
+			<File
 				RelativePath="SlimPrefs.h">
 			</File>
 			<File
@@ -203,18 +220,24 @@
 				RelativePath="SlimServerDoc.h">
 			</File>
 			<File
-				RelativePath="TimeoutSocket.h">
-			</File>
-			<File
-				RelativePath="sinstance.h">
-			</File>
-			<File
 				RelativePath="stdafx.h">
+			</File>
+			<File
+				RelativePath="TimeoutSocket.h">
 			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;jpg;jpeg;jpe;manifest">
+			<File
+				RelativePath="res\coldtool.bmp">
+			</File>
+			<File
+				RelativePath="res\hottoolb.bmp">
+			</File>
+			<File
+				RelativePath="res\slimpicture.bmp">
+			</File>
 			<File
 				RelativePath="res\SlimServer.ico">
 			</File>
@@ -226,15 +249,6 @@
 			</File>
 			<File
 				RelativePath="res\SlimServer.rc2">
-			</File>
-			<File
-				RelativePath="res\coldtool.bmp">
-			</File>
-			<File
-				RelativePath="res\hottoolb.bmp">
-			</File>
-			<File
-				RelativePath="res\slimpicture.bmp">
 			</File>
 		</Filter>
 		<File
