--- a/osx/Remote/Info-SlimServer_Remote.plist
+++ b/osx/Remote/Info-SlimServer_Remote.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.thinbits.slimserverremote</string>
 	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
+	<string>6.0a1</string>
 	<key>CFBundleName</key>
 	<string>SlimServer Remote</string>
 	<key>CFBundlePackageType</key>
@@ -23,7 +23,7 @@
 	<key>CFBundleVersion</key>
 	<string>5</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright 2004 Slim Devices, Inc.</string>
+	<string>Copyright 2003-2005 Slim Devices, Inc.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
