--- a/osx/Remote/Info-SlimServer_Remote.plist
+++ b/osx/Remote/Info-SlimServer_Remote.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.thinbits.slimserverremote</string>
 	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0b3</string>
+	<string>6.0.0</string>
 	<key>CFBundleName</key>
 	<string>SlimServer Remote</string>
 	<key>CFBundlePackageType</key>
