Update version number to 6.2.0
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@4751 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Remote/Info-SlimServer_Remote.plist
+++ b/osx/Remote/Info-SlimServer_Remote.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.thinbits.slimserverremote</string>
 	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.2b2</string>
+	<string>6.2.0</string>
 	<key>CFBundleName</key>
 	<string>SlimServer Remote</string>
 	<key>CFBundlePackageType</key>
