--- a/osx/Preference Pane/SLIMP3 Firmware Updater/SLIMP3 Firmware Updater-Info.plist
+++ b/osx/Preference Pane/SLIMP3 Firmware Updater/SLIMP3 Firmware Updater-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.slimdevices.SLIMP3_Firmware_Updater</string>
 	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.2b2</string>
+	<string>6.2.0</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>6.2b2</string>
+	<string>6.2.0</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
