Debian / Ubuntu updates:
* Depend on libgd-gd2-perl OR libgd-gd2-noxpm-perl

* Include /usr/share/slimserver/lib in the @INC path.

* Change INIT: {} to INIT {} in PluginManager, as it was causing issues.

git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@6006 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Depends: perl (>= 5.8.1),
  libclass-accessor-chained-perl, libclass-data-inheritable-perl,
  libclass-trigger-perl, libclass-virtual-perl, libclass-whitehole-perl,
  libcompress-zlib-perl, libtimedate-perl, libdbd-sqlite3-perl (>= 1.11-1),
- libdbi-perl, libwww-perl, libfile-which-perl, libgd-gd2-perl,
+ libdbi-perl, libwww-perl, libfile-which-perl, libgd-gd2-noxpm-perl | libgd-gd2-perl,
  libhtml-parser-perl, libima-dbi-perl, libio-string-perl, libnet-dns-perl,
  librpc-xml-perl, libfile-slurp-perl, libsql-abstract-perl, libyaml-perl,
  libsql-abstract-limit-perl, libtemplate-perl, libfile-bom-perl,
