--- a/debian/control
+++ b/debian/control
@@ -14,12 +14,12 @@ Depends: perl (>= 5.8.1),
  libcompress-zlib-perl, libtimedate-perl, libdbd-sqlite3-perl (>= 1.11-1),
  libdbi-perl, libwww-perl, libfile-which-perl, libgd-gd2-noxpm-perl | libgd-gd2-perl,
  libhtml-parser-perl, libima-dbi-perl, libio-string-perl, libnet-dns-perl,
- librpc-xml-perl, libfile-slurp-perl, libsql-abstract-perl, libyaml-perl,
+ librpc-xml-perl, libfile-slurp-perl, libsql-abstract-perl, libyaml-perl (>= 0.57-1),
  libsql-abstract-limit-perl, libtemplate-perl, libfile-bom-perl,
  libtie-regexphash-perl, libtime-modules-perl, libuniversal-moniker-perl,
  libreadonly-perl, libtext-unidecode-perl, libenum-perl, libtie-cache-perl,
  libtie-cache-lru-perl, libtie-llhash-perl, libpath-class-perl, liburi-perl,
- libtie-cache-lru-expires-perl, libxml-parser-perl, flac, sox, adduser
+ libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl, flac, sox, adduser
 Description: Streaming Audio Server
  SlimServer is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and
