MP4::Info 1.06 now has my aacgain / atom changes.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@6628 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Depends: perl (>= 5.8.1),
  libclass-trigger-perl, libclass-virtual-perl, libclass-whitehole-perl,
  libcompress-zlib-perl, libtimedate-perl, libdbd-sqlite3-perl (>= 1.11-1),
  libdbi-perl, libwww-perl, libfile-which-perl, libgd-gd2-noxpm-perl | libgd-gd2-perl,
- libhtml-parser-perl, libima-dbi-perl, libio-string-perl, libnet-dns-perl,
+ libhtml-parser-perl, libima-dbi-perl, libio-string-perl, libmp4-info-perl, libnet-dns-perl,
  librpc-xml-perl, libfile-slurp-perl, libsql-abstract-perl, libyaml-perl (>= 0.57-1),
  libsql-abstract-limit-perl, libtemplate-perl, libfile-bom-perl,
  libtie-regexphash-perl, libtime-modules-perl, libuniversal-moniker-perl,
