Add libnet-ip-perl as well.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@6721 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Depends: perl (>= 5.8.1),
  libdbi-perl, libwww-perl, libfile-which-perl, libgd-gd2-noxpm-perl | libgd-gd2-perl,
  libhtml-parser-perl, libima-dbi-perl, libio-string-perl, libmp4-info-perl, libnet-dns-perl,
  librpc-xml-perl, libfile-slurp-perl, libsql-abstract-perl, libyaml-perl (>= 0.57-1),
- libsql-abstract-limit-perl, libtemplate-perl, libfile-bom-perl,
+ libsql-abstract-limit-perl, libtemplate-perl, libfile-bom-perl, libnet-ip-perl,
  libtie-regexphash-perl, libpoe-perl, libtime-modules-perl, libuniversal-moniker-perl,
  libreadonly-perl, libtext-unidecode-perl, libenum-perl, libtie-cache-perl,
  libtie-cache-lru-perl, libtie-llhash-perl, libpath-class-perl, liburi-perl,
