Error is needed as well.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@6977 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Depends: perl (>= 5.8.1),
  libsql-abstract-limit-perl, libtemplate-perl, libfile-bom-perl, libnet-ip-perl,
  libtie-regexphash-perl, libpoe-perl, libtime-modules-perl, libuniversal-moniker-perl,
  libcache-cache-perl, libreadonly-perl, libtext-unidecode-perl, libenum-perl, libtie-cache-perl,
- libtie-cache-lru-perl, libtie-llhash-perl, libpath-class-perl, liburi-perl,
+ libtie-cache-lru-perl, libtie-llhash-perl, libpath-class-perl, liburi-perl, liberror-perl,
  libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl, flac, sox, adduser
 Description: Streaming Audio Server
  SlimServer is a cross-platform streaming server that supports a wide range
