--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Depends: perl (>= 5.8.1),
  libcache-cache-perl, libreadonly-perl, libtext-unidecode-perl, libenum-perl, libtie-cache-perl,
  libtie-cache-lru-perl, libtie-llhash-perl, libpath-class-perl, liburi-perl, liberror-perl, 
  libclass-singleton-perl, libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl,
- flac, sox, adduser
+ libxml-writer-perl, libxml-xspf-perl, flac, sox, adduser
 Description: Streaming Audio Server
  SlimServer is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and
