--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Package: slimserver
 Architecture: all
 Conflicts: slimp3
 Depends: perl (>= 5.8.1),
- libclass-accessor-chained-perl, libclass-data-inheritable-perl,
+ libcgi-perl, libclass-accessor-chained-perl, libclass-data-inheritable-perl,
  libclass-trigger-perl, libclass-virtual-perl, libclass-whitehole-perl,
  libcompress-zlib-perl, libtimedate-perl, libdbd-sqlite3-perl (>= 1.11-1),
  libdbi-perl, libwww-perl, libfile-which-perl, libgd-gd2-noxpm-perl | libgd-gd2-perl,
