--- a/debian/control
+++ b/debian/control
@@ -23,9 +23,10 @@ Depends: perl (>= 5.8.1),
  libpath-class-perl, liburi-perl, liberror-perl, libclass-singleton-perl,
  libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl,
  libdata-vstring-perl, libalgorithm-c3-perl, libclass-c3-perl,
- libdbix-class-perl, libxml-writer-perl, libxml-xspf-perl, libyaml-syck-perl (>= 0.41-1), 
- flac, sox, adduser, mysql-server-4.1 | mysql-server-5.0,
- mysql-client-4.1 | mysql-client-5.0
+ libdbix-class-perl, libxml-writer-perl, libxml-xspf-perl,
+ libyaml-syck-perl (>= 0.41-1), mysql-server-4.1 | mysql-server-5.0,
+ libmysqlclient14-dev | libmysqlclient15-dev, mysql-client-4.1 | mysql-client-5.0,
+ flac, sox, adduser
 
 Description: Streaming Audio Server
  SlimServer is a cross-platform streaming server that supports a wide range
