There can't be a space between the end of the package listings & Description.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@7673 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -24,10 +24,9 @@ Depends: perl (>= 5.8.1),
  libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl,
  libdata-vstring-perl, libalgorithm-c3-perl, libclass-c3-perl,
  libdbix-class-perl, libxml-writer-perl, libxml-xspf-perl, libdata-dump-perl,
- libdbix-migration-perl libyaml-syck-perl (>= 0.41-1), mysql-server-4.1 |
- mysql-server-5.0, libmysqlclient14-dev | libmysqlclient15-dev,
- mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser
-
+ libdbix-migration-perl libyaml-syck-perl (>= 0.41-1), mysql-server-4.1 | mysql-server-5.0,
+ libmysqlclient14-dev | libmysqlclient15-dev, mysql-client-4.1 | mysql-client-5.0,
+ flac, sox, adduser
 Description: Streaming Audio Server
  SlimServer is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and
