--- a/debian/control
+++ b/debian/control
@@ -15,16 +15,16 @@ Depends: perl (>= 5.8.1),
  libwww-perl, libfile-which-perl, libgd-gd2-noxpm-perl | libgd-gd2-perl,
  libhtml-parser-perl, libima-dbi-perl, libio-string-perl, libmp4-info-perl,
  libnet-dns-perl, librpc-xml-perl, libfile-slurp-perl, libsql-abstract-perl,
- libyaml-perl (>= 0.57-1), libsql-abstract-limit-perl, libtemplate-perl,
+ libyaml-perl (>= 0.57-1), libsql-abstract-limit-perl, libtemplate-perl, libdata-page-perl,
  libfile-bom-perl, libnet-ip-perl, libdigest-sha1-perl, libtie-regexphash-perl,
- libpoe-perl, libtime-modules-perl, libuniversal-moniker-perl,
+ libpoe-perl, libtime-modules-perl, libuniversal-moniker-perl, libclass-data-accessor-perl,
  libcache-cache-perl, libreadonly-perl, libtext-unidecode-perl, libenum-perl,
- libtie-cache-perl, libtie-cache-lru-perl, libtie-llhash-perl,
+ libtie-cache-perl, libtie-cache-lru-perl, libtie-llhash-perl, libcarp-clan-perl,
  libpath-class-perl, liburi-perl, liberror-perl, libclass-singleton-perl,
- libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl,
- libdata-vstring-perl, libalgorithm-c3-perl, libclass-c3-perl,
+ libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl, libfile-find-rule-perl,
+ libdata-vstring-perl, libalgorithm-c3-perl, libclass-c3-perl, libproc-background-perl,
  libdbix-class-perl, libxml-writer-perl, libxml-xspf-perl, libdata-dump-perl,
- libdbix-migration-perl libyaml-syck-perl (>= 0.41-1), mysql-server-4.1 | mysql-server-5.0,
+ libdbix-migration-perl, libyaml-syck-perl (>= 0.41-1), mysql-server-4.1 | mysql-server-5.0,
  libmysqlclient14-dev | libmysqlclient15-dev, mysql-client-4.1 | mysql-client-5.0,
  flac, sox, adduser
 Description: Streaming Audio Server
