Remove SOAP::Lite dependency.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@8269 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -23,8 +23,7 @@ Depends: perl (>= 5.8.1),
  libpath-class-perl, liburi-perl, liberror-perl, libclass-singleton-perl,
  libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl, libfile-find-rule-perl,
  libdata-vstring-perl, libalgorithm-c3-perl, libclass-c3-perl, libproc-background-perl,
- libdbix-class-perl, libxml-writer-perl, libxml-xspf-perl, libdata-dump-perl,
- libsoap-lite-perl, libmpeg-audio-frame-perl,
+ libdbix-class-perl, libxml-writer-perl, libxml-xspf-perl, libdata-dump-perl, libmpeg-audio-frame-perl,
  libdbix-migration-perl, libyaml-syck-perl (>= 0.41-1), mysql-server-4.1 | mysql-server-5.0,
  libmysqlclient14-dev | libmysqlclient15-dev, mysql-client-4.1 | mysql-client-5.0,
  flac, sox, adduser
