--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Depends: perl (>= 5.8.1),
  libpoe-perl, libtime-modules-perl, libuniversal-moniker-perl, libclass-data-accessor-perl,
  libcache-cache-perl, libreadonly-perl, libtext-unidecode-perl, libenum-perl,
  libtie-cache-perl, libtie-cache-lru-perl, libtie-llhash-perl, libcarp-clan-perl,
- libpath-class-perl, liburi-perl, liberror-perl, libclass-singleton-perl,
+ libpath-class-perl, liburi-perl, liberror-perl, libclass-singleton-perl, libnet-upnp-perl,
  libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl, libfile-find-rule-perl,
  libdata-vstring-perl, libalgorithm-c3-perl, libclass-c3-perl, libproc-background-perl,
  libdbix-class-perl, libxml-writer-perl, libxml-xspf-perl, libdata-dump-perl, libmpeg-audio-frame-perl,
