Work properly without IO::Socket::SSL installed
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@8296 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Depends: perl (>= 5.8.1),
  libclass-trigger-perl, libclass-virtual-perl, libclass-whitehole-perl,
  libcompress-zlib-perl, libtimedate-perl, libdbd-mysql-perl, libdbi-perl,
  libwww-perl, libfile-which-perl, libgd-gd2-noxpm-perl | libgd-gd2-perl,
- libhtml-parser-perl, libima-dbi-perl, libio-string-perl, libmp4-info-perl,
+ libhtml-parser-perl, libima-dbi-perl, libio-string-perl, libio-socket-ssl-perl, libmp4-info-perl,
  libnet-dns-perl, librpc-xml-perl, libfile-slurp-perl, libsql-abstract-perl,
  libyaml-perl (>= 0.57-1), libsql-abstract-limit-perl, libtemplate-perl, libdata-page-perl,
  libfile-bom-perl, libnet-ip-perl, libdigest-sha1-perl, libtie-regexphash-perl,
