Use dirsFor() to find revision.txt. Make sure the Debian package gets it.
Bug: 3728
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@8390 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -57,6 +57,9 @@ install:
 	cp ${source}/Installation.txt ${base}/usr/share/doc/slimserver/
 	cp ${source}/License.txt $(CURDIR)/debian/copyright
 
+	# Copy the revision file
+	cp ${source}/revision.txt ${base}/${share}
+
 binary-indep: install
 	dh_testdir
 	dh_testroot
