--- a/debian/control
+++ b/debian/control
@@ -20,10 +20,11 @@ Depends: perl (>= 5.8.1),
  libpoe-perl, libtime-modules-perl, libuniversal-moniker-perl, libclass-data-accessor-perl,
  libcache-cache-perl, libreadonly-perl, libtext-unidecode-perl, libenum-perl,
  libtie-cache-perl, libtie-cache-lru-perl, libtie-llhash-perl, libcarp-clan-perl,
- libpath-class-perl, liburi-perl, liburi-find-perl, liberror-perl, libclass-singleton-perl, libnet-upnp-perl,
+ libpath-class-perl, liburi-perl, liburi-find-perl, liberror-perl, libclass-singleton-perl,
  libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl, libfile-find-rule-perl,
  libdata-vstring-perl, libalgorithm-c3-perl, libclass-c3-perl, libproc-background-perl,
- libdbix-class-perl, libxml-writer-perl, libxml-xspf-perl, libdata-dump-perl, libmpeg-audio-frame-perl,
+ libdbix-class-perl, libclass-inspector-perl, libxml-writer-perl, libxml-xspf-perl,
+ libdata-dump-perl, libmpeg-audio-frame-perl, libnet-upnp-perl,
  libdbix-migration-perl, libyaml-syck-perl (>= 0.41-1), mysql-server-4.1 | mysql-server-5.0,
  libmysqlclient14-dev | libmysqlclient15-dev, mysql-client-4.1 | mysql-client-5.0,
  flac, sox, adduser
