Remove the errmsg.* files from the Debian distribution.
Bug: 3968
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@9508 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -46,6 +46,10 @@ install:
 	cp -r ${source}/SQL ${base}/${share}
 	cp -r ${source}/strings.txt ${base}/${share}
 
+	# Remove errmsg.sys files from the MySQL dir, since they may not match
+	# up with the installed version's
+	rm ${base}/${share}/MySQL/errmsg.*
+
 	cp -r ${source}/*.conf ${base}/etc/slimserver/
 	cp -r $(CURDIR)/debian/slimserver.default ${base}/etc/default/slimserver
 
