Update both fedora & debian packge files with up to date dependencies. This will likely break the Fedora package.
Remove unused CPAN modules.

git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@10093 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -10,14 +10,13 @@ Architecture: all
 Conflicts: slimp3
 Depends: perl (>= 5.8.1),
  libcgi-perl, libclass-accessor-chained-perl, libclass-data-inheritable-perl,
- libclass-trigger-perl, libclass-virtual-perl, libclass-whitehole-perl,
- libcompress-zlib-perl, libtimedate-perl, libdbd-mysql-perl, libdbi-perl,
+ libclass-virtual-perl, libcompress-zlib-perl, libtimedate-perl, libdbd-mysql-perl, libdbi-perl,
  libwww-perl, libfile-which-perl, libgd-gd2-noxpm-perl | libgd-gd2-perl,
- libhtml-parser-perl, libima-dbi-perl, libio-string-perl, libio-socket-ssl-perl, libmp4-info-perl,
+ libhtml-parser-perl, libio-string-perl, libio-socket-ssl-perl, libmp4-info-perl,
  libnet-dns-perl, librpc-xml-perl, libfile-slurp-perl, libsql-abstract-perl,
  libyaml-perl (>= 0.57-1), libsql-abstract-limit-perl, libtemplate-perl, libdata-page-perl,
  libfile-bom-perl, libnet-ip-perl, libdigest-sha1-perl, libtie-regexphash-perl,
- libpoe-perl, libtime-modules-perl, libuniversal-moniker-perl, libclass-data-accessor-perl,
+ libpoe-perl, libtime-modules-perl, libclass-data-accessor-perl,
  libcache-cache-perl, libreadonly-perl, libtext-unidecode-perl, libenum-perl,
  libtie-cache-perl, libtie-cache-lru-perl, libtie-llhash-perl, libcarp-clan-perl,
  libpath-class-perl, liburi-perl, liburi-find-perl, liberror-perl, libclass-singleton-perl,
