--- a/fedora/SOURCES/slimserver.config
+++ b/fedora/SOURCES/slimserver.config
@@ -2,5 +2,5 @@
 SLIMSERVER_USER="slimserver"
 SLIMSERVER_HOME="PREFIX"
 SLIMSERVER_CFG="/etc/slimserver.conf"
-SLIMSERVER_LOG="/tmp/slimserver.log"
+SLIMSERVER_LOG="/var/log/slimserver/slimserver.log"
 SLIMSERVER_ARGS="--daemon --prefsfile=$SLIMSERVER_CFG --logfile=$SLIMSERVER_LOG"
