--- a/fedora/SOURCES/slimserver.config
+++ b/fedora/SOURCES/slimserver.config
@@ -1,6 +1,6 @@
 # Edit this to suit your setup
 SLIMSERVER_USER="slimserver"
 SLIMSERVER_HOME="PREFIX"
-SLIMSERVER_CFG="/etc/slimserver.conf"
+SLIMSERVER_CFG="/etc/slimserver/slimserver.conf"
 SLIMSERVER_LOG="/var/log/slimserver/slimserver.log"
 SLIMSERVER_ARGS="--daemon --prefsfile=$SLIMSERVER_CFG --logfile=$SLIMSERVER_LOG"
