Implement Log::Log4perl debugging:
* Complete overhaul of the logging system.

* --d_foo options have been removed.

* Use: --debug network.protocol.slimproto=INFO instead.

* See http://wiki.slimdevices.com/index.cgi?Debugging for more info.

* The scanner now logs to it's own file.

* Debugging settings are persistent across restarts.

Bug: 4293
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@10437 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/redhat/slimserver.config
+++ b/redhat/slimserver.config
@@ -2,5 +2,5 @@
 SLIMSERVER_USER="slimserver"
 SLIMSERVER_HOME="PREFIX"
 SLIMSERVER_CFG="/etc/slimserver.conf"
-SLIMSERVER_LOG="/tmp/slimserver.log"
-SLIMSERVER_ARGS="--daemon --prefsfile=$SLIMSERVER_CFG --logfile=$SLIMSERVER_LOG"
+SLIMSERVER_LOG="/var/log/slimserver"
+SLIMSERVER_ARGS="--daemon --prefsfile=$SLIMSERVER_CFG --logdir=$SLIMSERVER_LOG"
