Clean up use of %{_slimdir} which is no longer defined, hardcode SLIMSERVER_HOME in sysconfig
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@10441 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/fedora/SOURCES/slimserver.config
+++ b/fedora/SOURCES/slimserver.config
@@ -1,6 +1,6 @@
 # Edit this to suit your setup
 SLIMSERVER_USER="slimserver"
-SLIMSERVER_HOME="PREFIX"
+SLIMSERVER_HOME="/usr/sbin"
 SLIMSERVER_CFG="/etc/slimserver/slimserver.conf"
 SLIMSERVER_LOG="/var/log/slimserver"
 SLIMSERVER_ARGS="--daemon --prefsfile=$SLIMSERVER_CFG --logdir=$SLIMSERVER_LOG"
