--- a/fedora/SOURCES/slimserver.config
+++ b/fedora/SOURCES/slimserver.config
@@ -2,5 +2,8 @@
 SLIMSERVER_USER="slimserver"
 SLIMSERVER_HOME="/usr/sbin"
 SLIMSERVER_CFG="/etc/slimserver/slimserver.conf"
-SLIMSERVER_LOG="/var/log/slimserver"
-SLIMSERVER_ARGS="--daemon --prefsfile=$SLIMSERVER_CFG --logdir=$SLIMSERVER_LOG"
+SLIMSERVER_LOG="/var/log/slimserver/slimserver.log"
+SLIMSERVER_ARGS="--daemon --prefsfile=$SLIMSERVER_CFG --logfile=$SLIMSERVER_LOG"
+# Use the following when we move to 7.0
+#SLIMSERVER_LOG="/var/log/slimserver"
+#SLIMSERVER_ARGS="--daemon --prefsfile=$SLIMSERVER_CFG --logdir=$SLIMSERVER_LOG"
