--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Depends: perl (>= 5.8.1),
  libtie-cache-perl, libtie-cache-lru-perl, libtie-llhash-perl, libcarp-clan-perl,
  libpath-class-perl, liburi-perl, liburi-find-perl, liberror-perl, libclass-singleton-perl,
  libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl, libfile-find-rule-perl,
- libdata-vstring-perl, libalgorithm-c3-perl, libclass-c3-perl, libproc-background-perl,
+ libalgorithm-c3-perl, libclass-c3-perl, libproc-background-perl,
  libdbix-class-perl, libclass-inspector-perl, libxml-writer-perl, libxml-xspf-perl,
  liblog-log4perl-perl, libexporter-lite-perl, libmodule-pluggable-perl,
  libdata-dump-perl, libmpeg-audio-frame-perl, libnet-upnp-perl, libxml-simple-perl (>= 2.15-1),
