Update branding and copyright information to Logitech
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@11682 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -31,6 +31,5 @@ Depends: perl (>= 5.8.1),
 Description: Streaming Audio Server
  SlimServer is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and
- WMA. Although it was developed to stream music files to Slim Devices' 
- Squeezebox range of hardware players.
+ WMA.
  .
