Change maintainer for deb build
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@12073 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: slimserver
 Section: sound
 Priority: optional
-Maintainer: Dan Sully <debian@slimdevices.com>
+Maintainer: Logitech/Slim Devices <debian@slimdevices.com>
 Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.6.2
 
