--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Depends: perl (>= 5.8.1),
  libalgorithm-c3-perl, libclass-c3-perl, libproc-background-perl, libpar-perl,
  libdbix-class-perl, libclass-inspector-perl, libxml-writer-perl, libxml-xspf-perl,
  liblog-log4perl-perl, libexporter-lite-perl, libfile-next-perl (>= 0.30-1),
- libdata-dump-perl, libmpeg-audio-frame-perl, libnet-upnp-perl, libxml-simple-perl (>= 2.15-1),
+ libdata-dump-perl, libnet-upnp-perl, libxml-simple-perl (>= 2.15-1),
  libdbix-migration-perl, libyaml-syck-perl (>= 0.41-1), mysql-server-4.1 | mysql-server-5.0,
  libmysqlclient14-dev | libmysqlclient15-dev, mysql-client-4.1 | mysql-client-5.0,
  flac, sox, adduser
