Add dep for Tie::IxHash
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@13045 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Depends: perl (>= 5.8.1),
  libfile-bom-perl, libnet-ip-perl, libdigest-sha1-perl, libtie-regexphash-perl,
  libpoe-perl, libtime-modules-perl, libclass-data-accessor-perl,
  libcache-cache-perl, libreadonly-perl, libtext-unidecode-perl, libenum-perl,
- libtie-cache-perl, libtie-cache-lru-perl, libtie-llhash-perl, libcarp-clan-perl,
+ libtie-cache-perl, libtie-cache-lru-perl, libtie-llhash-perl, libtie-ixhash-perl, libcarp-clan-perl,
  libpath-class-perl, liburi-perl, liburi-find-perl, liberror-perl, libclass-singleton-perl,
  libtie-cache-lru-expires-perl (>= 0.54-1), libxml-parser-perl, libfile-find-rule-perl,
  libalgorithm-c3-perl, libclass-c3-perl, libproc-background-perl, libpar-perl,
