Squeeze* them all - goodbye SlimServer, welcome SqueezeCenter! - strings - documentation, readme etc. - comments
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@13299 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -53,7 +53,7 @@ install:
 	cp -r ${source}/*.conf ${base}/etc/slimserver/
 	cp -r $(CURDIR)/debian/slimserver.default ${base}/etc/default/slimserver
 
-	# Wrapper to keep SlimServer alive.
+	# Wrapper to keep SqueezeCenter alive.
 	cp -r $(CURDIR)/debian/slimserver_safe ${base}/usr/sbin/slimserver_safe
 
 	# Documentation
