--- a/osx/Preference Pane/Info-SlimServer.plist
+++ b/osx/Preference Pane/Info-SlimServer.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>SlimServer</string>
+	<string>SqueezeCenter</string>
 	<key>CFBundleGetInfoString</key>
-	<string>SlimServer 7.0a, Copyright © 2002-2006 Logitech</string>
+	<string>SqueezeCenter 7.0a, Copyright © 2002-2006 Logitech</string>
 	<key>CFBundleIconFile</key>
 	<string>slimicon.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.2.2</string>
 	<key>CFBundleName</key>
-	<string>SlimServer</string>
+	<string>SqueezeCenter</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
