--- a/osx/Preference Pane/Info-SlimServer_Installer.plist
+++ b/osx/Preference Pane/Info-SlimServer_Installer.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>SlimServer Installer</string>
+	<string>SqueezeCenter Installer</string>
 	<key>CFBundleGetInfoString</key>
-	<string>SlimServer Installer 7.0a, Copyright 2003-2007 Logitech. All Rights Reserved</string>
+	<string>SqueezeCenter Installer 7.0a, Copyright 2003-2007 Logitech. All Rights Reserved</string>
 	<key>CFBundleIconFile</key>
 	<string>sliminstaller.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.2.2</string>
 	<key>CFBundleName</key>
-	<string>SlimServer Installer</string>
+	<string>SqueezeCenter Installer</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
