--- a/osx/Preference Pane/Installer.plist
+++ b/osx/Preference Pane/Installer.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>SqueezeCenter Installer</string>
 	<key>CFBundleGetInfoString</key>
-	<string>SqueezeCenter Installer 7.0a, Copyright 2003-2007 Logitech. All Rights Reserved</string>
+	<string>SqueezeCenter Installer 7.0a, Copyright 2003-2007 Logitech</string>
 	<key>CFBundleIconFile</key>
 	<string>installer.icns</string>
 	<key>CFBundleIdentifier</key>
