Rearrange RPM file locations for better FHS compatibility
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@14562 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/redhat/squeezecenter.config
+++ b/redhat/squeezecenter.config
@@ -1,8 +1,8 @@
 # Edit this to suit your setup
 SQUEEZECENTER_USER="squeezecenter"
-SQUEEZECENTER_HOME="/usr/sbin"
-SQUEEZECENTER_CFG_DIR="/etc/squeezecenter"
+SQUEEZECENTER_HOME="/usr/libexec"
+SQUEEZECENTER_CFG_DIR="/var/lib/squeezecenter/prefs"
 SQUEEZECENTER_LOG_DIR="/var/log/squeezecenter"
-SQUEEZECENTER_CACHE_DIR="/var/cache/squeezecenter"
+SQUEEZECENTER_CACHE_DIR="/var/lib/squeezecenter/cache"
 SQUEEZECENTER_ARGS="--daemon --prefsdir=$SQUEEZECENTER_CFG_DIR --logdir=$SQUEEZECENTER_LOG_DIR --cachedir=$SQUEEZECENTER_CACHE_DIR"
 
