--- a/osx/Preference Pane/Launcher.plist
+++ b/osx/Preference Pane/Launcher.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Launcher</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Launcher - (c) 2002-2007 by Logitech. All rights reserved.</string>
+	<string>Launcher - Copyright 2002-2007 Logitech. All rights reserved.</string>
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
