--- a/osx/Preference Pane/Info.plist
+++ b/osx/Preference Pane/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>SqueezeCenter</string>
 	<key>CFBundleGetInfoString</key>
-	<string>SqueezeCenter 7.0a, Copyright 2002-2007 Logitech</string>
+	<string>SqueezeCenter 7.0, Copyright 2002-2007 Logitech</string>
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
