Just fixed a few paths...
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@15649 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/rules
+++ b/readynas/rules
@@ -38,7 +38,7 @@ install:
 
 	# Copy our server files to the appropriate Debian locations.
 	install -m0755 ${source}/slimserver.pl ${base}/${share}/slimserver.pl
-	install -m0755 ${source}/scanner.pl ${base}/${share}/squeezecenter-scanner
+	install -m0755 ${source}/scanner.pl ${base}/${share}/scanner.pl
 
 	# We need to copy the Slim directory over...
 	cp -r ${source}/Slim ${base}/${share}
