Converted Debian package from 'SlimServer' to 'SqueezeCenter'. This will break 'slimserver' installs, so added in a conflict that won't let you install it without removing your old slimserver package first. Also added in fixes that let the package be removed and installed whether or not squeezecenter_safe is running.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@15772 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
-Source: slimserver
+Source: squeezecenter
 Section: sound
 Priority: optional
 Maintainer: Logitech/Slim Devices <debian@slimdevices.com>
 Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.6.2
 
-Package: slimserver
+Package: squeezecenter
 Architecture: all
-Conflicts: slimp3
+Conflicts: slimp3, slimserver
 Depends: perl (>= 5.8.1),
  mysql-server-4.1 | mysql-server-5.0, libmysqlclient14-dev | libmysqlclient15-dev,
  mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser
