Modified several file locations to be more in-sync with the RPM build.
git-svn-id: file:///home/awy/mirror/slim/branches/7.0/platforms@16973 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Standards-Version: 3.6.2
 
 Package: squeezecenter
 Architecture: all
-Conflicts: slimp3, slimserver
+Conflicts: slimp3,slimserver
+Replaces: slimp3,slimserver
 Depends: perl (>= 5.8.1),
  mysql-server-4.1 | mysql-server-5.0, libmysqlclient14-dev | libmysqlclient15-dev,
  mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser
