We need to create the cachedir manually due to a bug in slimserver.pl that won't allow it to be selected unless it already exists. Even though its supposed to create it dynamically.
git-svn-id: file:///home/awy/mirror/slim/branches/7.0/platforms@16974 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -30,6 +30,7 @@ install:
 	install -d -m0755 ${base}/${share}
 	install -d -m0755 ${base}/usr/share/doc/squeezecenter/
 	install -d -m0755 ${base}/${varlib}/prefs
+	install -d -m0755 ${base}/${varlib}/cache
 
 	# Copy our server files to the appropriate Debian locations.
 	install -m0755 ${source}/slimserver.pl ${base}/usr/sbin/squeezecenter-server
