--- a/debian/rules
+++ b/debian/rules
@@ -37,14 +37,17 @@ install:
 	install -m0755 ${source}/scanner.pl ${base}/usr/sbin/squeezecenter-scanner
 
 	cp -r ${source}/Slim ${base}/usr/share/perl5/
-
+	
 	# Copy our CPAN directory and locally modified perl modules
 	cp -r ${source}/CPAN ${base}/${share}
 	cp -r ${source}/lib ${base}/${share}
 	
-	# Remove non-Linux binary modules
+	# Remove non-Linux binary modules and binaries
 	rm -rf ${base}/${share}/CPAN/arch/5.8/darwin-thread-multi-2level
 	rm -rf ${base}/${share}/CPAN/arch/5.8/MSWin32-x86-multi-thread
+	rm -rf ${source}/Bin/darwin
+	rm -rf ${source}/Bin/MSWin32-x86-multi-thread
+	rm -rf ${source}/Bin/powerpc-hardhat-linux
 
 	# And aux files needed to run SlimServer
 	cp -r ${source}/Firmware ${base}/${share}
@@ -55,6 +58,9 @@ install:
 	cp -r ${source}/strings.txt ${base}/${share}
 	cp -r ${source}/MySQL ${base}/${share}
 
+	# Make sure we copy in the Bin directory
+	cp -r ${source}/Bin ${base}/${share}
+
 	# We put the Plugins into /var/lib/ because they are modifiable, 
 	# and shouldn't be put into /usr. 
 	cp -r ${source}/Plugins ${base}/${varlib}
@@ -63,6 +69,10 @@ install:
 	# Remove errmsg.sys files from the MySQL dir, since they may not match
 	# up with the installed version's
 	rm ${base}/${share}/MySQL/errmsg.*
+
+	# Make sure we copy in the Bin directory
+	cp -r ${source}/Bin ${base}/${share}
+
 
 	cp -r ${source}/*.conf ${base}/${varlib}/prefs
 	ln -s ${base}/${varlib}/prefs/server.prefs ${base}/etc/squeezecenter/server.conf
