Should fix some broken sym links in the package...
git-svn-id: file:///home/awy/mirror/slim/branches/7.0/platforms@17102 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -64,7 +64,7 @@ install:
 	# We put the Plugins into /var/lib/ because they are modifiable, 
 	# and shouldn't be put into /usr. 
 	cp -r ${source}/Plugins ${base}/${varlib}
-	ln -s ${base}/${varlib}/Plugins ${base}/${share}/Plugins
+	ln -s /${varlib}/Plugins ${base}/${share}/Plugins
 
 	# Remove errmsg.sys files from the MySQL dir, since they may not match
 	# up with the installed version's
@@ -75,7 +75,7 @@ install:
 
 
 	cp -r ${source}/*.conf ${base}/${varlib}/prefs
-	ln -s ${base}/${varlib}/prefs/server.prefs ${base}/etc/squeezecenter/server.conf
+	ln -s /${varlib}/prefs/server.prefs ${base}/etc/squeezecenter/server.conf
 	cp -r $(CURDIR)/debian/squeezecenter.default ${base}/etc/default/squeezecenter
 
 	# Wrapper to keep SqueezeCenter alive.
