added code so that if server.prefs doesnt exist, we create it...
git-svn-id: file:///home/awy/mirror/slim/branches/7.0/platforms@17111 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -75,6 +75,7 @@ install:
 
 
 	cp -r ${source}/*.conf ${base}/${varlib}/prefs
+	touch /${varlib}/prefs/server.prefs 
 	ln -s /${varlib}/prefs/server.prefs ${base}/etc/squeezecenter/server.conf
 	cp -r $(CURDIR)/debian/squeezecenter.default ${base}/etc/default/squeezecenter
 
