Fixed the broken nightly issue. We're now properly checking /etc/squeezecenter for modules.conf, convert.conf and types.conf. We're checking /var/lib/squeezecenter/prefs for the server.prefs file.
git-svn-id: file:///home/awy/mirror/slim/branches/7.0/platforms@17175 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -73,10 +73,10 @@ install:
 	# Make sure we copy in the Bin directory
 	cp -r ${source}/Bin ${base}/${share}
 
+	# Set up the pref's file locations...
+	cp -r ${source}/*.conf ${base}/etc/squeezecenter
 
-	cp -r ${source}/*.conf ${base}/${varlib}/prefs
-	touch ${base}/${varlib}/prefs/server.prefs 
-	ln -s /${varlib}/prefs/server.prefs ${base}/etc/squeezecenter/server.conf
+	# Copy over the squeezecenter init script...
 	cp -r $(CURDIR)/debian/squeezecenter.default ${base}/etc/default/squeezecenter
 
 	# Wrapper to keep SqueezeCenter alive.
