--- a/readynas/control
+++ b/readynas/control
@@ -8,7 +8,8 @@ Standards-Version: 3.6.2
 Package: squeezecenter-readynas
 Version: 7.0.0
 Architecture: sparc
-Conflicts: slimp3
+Conflicts: slimp3,slimserver
+Replaces: slimp3,slimserver
 Depends: perl (>= 5.8.1),
  mysql-server-4.1 | mysql-server-5.0, libmysqlclient15off,
  mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser
